<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="Misc">
        <menu>
            <item
                android:id="@+id/nav_credits"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_credits" />
        </menu>
    </item>

</menu>
