<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    app:behavior_peekHeight="105dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_hideable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Place name"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                android:id="@+id/bottomSheetTitle"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bottomSheetItineraryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:height="40dp"
                    android:background="@drawable/button_background"
                    android:drawableStart="@drawable/ic_go_to"
                    android:drawablePadding="10dp"
                    android:paddingLeft="18dp"
                    android:paddingTop="0dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="0dp"
                    android:text="@string/bottom_sheet_button_go_to"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:height="40dp"
                    android:background="@drawable/button_background"
                    android:drawableStart="@drawable/ic_location_on_24dp"
                    android:drawablePadding="5dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="0dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="0dp"
                    android:text="@string/bottom_sheet_button_centrate"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:layout_marginStart="10dp"
                    android:id="@+id/bottomSheetCentrateButton"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="#5d5d5d" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivFloorDifference"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="12dp"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_arrow_back_24dp" />

                <TextView
                    android:id="@+id/bottomSheetDistanceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12 min away"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="#5d5d5d" />

            <TextView
                android:id="@+id/tvUpcomingEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bottom_sheet_upcoming_events"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bottomSheetEventsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
                <!-- android:minHeight="200dp" > -->


        </LinearLayout>

    </LinearLayout>

</LinearLayout>